crt: msvcrt.def.in: Replace F_I386+F_ARM_ANY by new F_NON_X64() macro
Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/lib-common/msvcrt.def.in
+++ b/mingw-w64-crt/lib-common/msvcrt.def.in
@@ -600,8 +600,7 @@ _flsbuf
 _flushall
 _fmode DATA
 _fpclass
-F_I386(_fpieee_flt)
-F_ARM_ANY(_fpieee_flt)
+F_NON_X64(_fpieee_flt)
 _fpreset DATA
 _fputchar
 _fputwchar
