--- a/mingw-w64-crt/def-include/func.def.in
+++ b/mingw-w64-crt/def-include/func.def.in
@@ -10,6 +10,7 @@
 // F_ARM64     - function available only on arm64
 // F_ARM_ANY   - function available on 32 and 64 bit arm
 // F_NON_I386  - function available on everything but i386
+// F_NON_X64   - function available on everything but x86_64
 // F_NON_ARM64 - function available on everything but arm64
 #if defined(DEF_X64)
 #define F64(x) x
@@ -21,18 +22,21 @@
 #define F32(x) x
 #define F_I386(x) x
 #define F_X86_ANY(x) x
+#define F_NON_X64(x) x
 #define F_NON_ARM64(x) x
 #elif defined(DEF_ARM32)
 #define F32(x) x
 #define F_ARM32(x) x
 #define F_ARM_ANY(x) x
 #define F_NON_I386(x) x
+#define F_NON_X64(x) x
 #define F_NON_ARM64(x) x
 #elif defined(DEF_ARM64)
 #define F64(x) x
 #define F_ARM64(x) x
 #define F_ARM_ANY(x) x
 #define F_NON_I386(x) x
+#define F_NON_X64(x) x
 #else
 #error No DEF_<ARCH> is defined
 #endif
@@ -63,6 +67,9 @@
 #endif
 #ifndef F_NON_I386
 #define F_NON_I386(x)
+#endif
+#ifndef F_NON_X64
+#define F_NON_X64(x)
 #endif
 #ifndef F_NON_ARM64
 #define F_NON_ARM64(x)
