--- a/mingw-w64-crt/lib-common/ucrtbase.def.in
+++ b/mingw-w64-crt/lib-common/ucrtbase.def.in
@@ -1400,7 +1400,7 @@ _o__strtof_l
 _o__strtoi64
 _o__strtoi64_l
 _o__strtol_l
-_o__strtold_l
+F_ARM_ANY(_o__strtold_l) ; Can't use long double functions from the CRT on x86
 _o__strtoll_l
 _o__strtoui64
 _o__strtoui64_l
@@ -1480,7 +1480,7 @@ _o__wcstof_l
 _o__wcstoi64
 _o__wcstoi64_l
 _o__wcstol_l
-_o__wcstold_l
+F_ARM_ANY(_o__wcstold_l) ; Can't use long double functions from the CRT on x86
 _o__wcstoll_l
 _o__wcstombs_l
 _o__wcstombs_s_l
@@ -1578,21 +1578,21 @@ _o_acos
 _o_acosf
 _o_acosh
 _o_acoshf
-_o_acoshl
+F_ARM_ANY(_o_acoshl) ; Can't use long double functions from the CRT on x86
 _o_asctime
 _o_asctime_s
 _o_asin
 _o_asinf
 _o_asinh
 _o_asinhf
-_o_asinhl
+F_ARM_ANY(_o_asinhl) ; Can't use long double functions from the CRT on x86
 _o_atan
 _o_atan2
 _o_atan2f
 _o_atanf
 _o_atanh
 _o_atanhf
-_o_atanhl
+F_ARM_ANY(_o_atanhl) ; Can't use long double functions from the CRT on x86
 _o_atof
 _o_atoi
 _o_atol
@@ -1614,14 +1614,14 @@ _o_coshf
 _o_erf
 _o_erfc
 _o_erfcf
-_o_erfcl
+F_ARM_ANY(_o_erfcl) ; Can't use long double functions from the CRT on x86
 _o_erff
-_o_erfl
+F_ARM_ANY(_o_erfl) ; Can't use long double functions from the CRT on x86
 _o_exit
 _o_exp
 _o_exp2
 _o_exp2f
-_o_exp2l
+F_ARM_ANY(_o_exp2l) ; Can't use long double functions from the CRT on x86
 _o_expf
 _o_fabs
 _o_fclose
@@ -1637,7 +1637,7 @@ _o_floor
 _o_floorf
 _o_fma
 _o_fmaf
-_o_fmal
+F_ARM_ANY(_o_fmal) ; Can't use long double functions from the CRT on x86
 _o_fmod
 _o_fmodf
 _o_fopen
@@ -1696,33 +1696,33 @@ _o_isxdigit
 _o_ldexp
 _o_lgamma
 _o_lgammaf
-_o_lgammal
+F_ARM_ANY(_o_lgammal) ; Can't use long double functions from the CRT on x86
 _o_llrint
 _o_llrintf
-_o_llrintl
+F_ARM_ANY(_o_llrintl) ; Can't use long double functions from the CRT on x86
 _o_llround
 _o_llroundf
-_o_llroundl
+F_ARM_ANY(_o_llroundl) ; Can't use long double functions from the CRT on x86
 _o_localeconv
 _o_log
 _o_log10
 _o_log10f
 _o_log1p
 _o_log1pf
-_o_log1pl
+F_ARM_ANY(_o_log1pl) ; Can't use long double functions from the CRT on x86
 _o_log2
 _o_log2f
-_o_log2l
+F_ARM_ANY(_o_log2l) ; Can't use long double functions from the CRT on x86
 _o_logb
 _o_logbf
-_o_logbl
+F_ARM_ANY(_o_logbl) ; Can't use long double functions from the CRT on x86
 _o_logf
 _o_lrint
 _o_lrintf
-_o_lrintl
+F_ARM_ANY(_o_lrintl) ; Can't use long double functions from the CRT on x86
 _o_lround
 _o_lroundf
-_o_lroundl
+F_ARM_ANY(_o_lroundl) ; Can't use long double functions from the CRT on x86
 _o_malloc
 _o_mblen
 _o_mbrlen
@@ -1740,16 +1740,16 @@ _o_modf
 _o_modff
 _o_nan
 _o_nanf
-_o_nanl
+F_ARM_ANY(_o_nanl) ; Can't use long double functions from the CRT on x86
 _o_nearbyint
 _o_nearbyintf
-_o_nearbyintl
+F_ARM_ANY(_o_nearbyintl) ; Can't use long double functions from the CRT on x86
 _o_nextafter
 _o_nextafterf
-_o_nextafterl
-_o_nexttoward
-_o_nexttowardf
-_o_nexttowardl
+F_ARM_ANY(_o_nextafterl) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(_o_nexttoward) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(_o_nexttowardf) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(_o_nexttowardl) ; Can't use long double functions from the CRT on x86
 _o_pow
 _o_powf
 _o_putc
@@ -1765,25 +1765,25 @@ _o_rand_s
 _o_realloc
 _o_remainder
 _o_remainderf
-_o_remainderl
+F_ARM_ANY(_o_remainderl) ; Can't use long double functions from the CRT on x86
 _o_remove
 _o_remquo
 _o_remquof
-_o_remquol
+F_ARM_ANY(_o_remquol) ; Can't use long double functions from the CRT on x86
 _o_rename
 _o_rewind
 _o_rint
 _o_rintf
-_o_rintl
+F_ARM_ANY(_o_rintl) ; Can't use long double functions from the CRT on x86
 _o_round
 _o_roundf
-_o_roundl
+F_ARM_ANY(_o_roundl) ; Can't use long double functions from the CRT on x86
 _o_scalbln
 _o_scalblnf
-_o_scalblnl
+F_ARM_ANY(_o_scalblnl) ; Can't use long double functions from the CRT on x86
 _o_scalbn
 _o_scalbnf
-_o_scalbnl
+F_ARM_ANY(_o_scalbnl) ; Can't use long double functions from the CRT on x86
 _o_set_terminate
 _o_setbuf
 _o_setlocale
@@ -1808,7 +1808,7 @@ _o_strtof
 _o_strtok
 _o_strtok_s
 _o_strtol
-_o_strtold
+F_ARM_ANY(_o_strtold) ; Can't use long double functions from the CRT on x86
 _o_strtoll
 _o_strtoul
 _o_strtoull
@@ -1820,7 +1820,7 @@ _o_tanhf
 _o_terminate
 _o_tgamma
 _o_tgammaf
-_o_tgammal
+F_ARM_ANY(_o_tgammal) ; Can't use long double functions from the CRT on x86
 _o_tmpfile_s
 _o_tmpnam_s
 _o_tolower
@@ -1845,7 +1845,7 @@ _o_wcstof
 _o_wcstok
 _o_wcstok_s
 _o_wcstol
-_o_wcstold
+F_ARM_ANY(_o_wcstold) ; Can't use long double functions from the CRT on x86
 _o_wcstoll
 _o_wcstombs
 _o_wcstombs_s
@@ -1972,7 +1972,7 @@ _strtoi64
 _strtoi64_l
 _strtoimax_l
 _strtol_l
-_strtold_l
+F_ARM_ANY(_strtold_l) ; Can't use long double functions from the CRT on x86
 _strtoll_l
 _strtoui64
 _strtoui64_l
@@ -2061,7 +2061,7 @@ _wcstoi64
 _wcstoi64_l
 _wcstoimax_l
 _wcstol_l
-_wcstold_l
+F_ARM_ANY(_wcstold_l) ; Can't use long double functions from the CRT on x86
 _wcstoll_l
 _wcstombs_l
 _wcstombs_s_l
@@ -2174,21 +2174,21 @@ acos
 F_NON_I386(acosf)
 acosh
 acoshf
-acoshl F_X86_ANY(DATA)
+F_ARM_ANY(acoshl) ; Can't use long double functions from the CRT on x86
 asctime
 asctime_s
 asin
 F_NON_I386(asinf)
 asinh
 asinhf
-asinhl F_X86_ANY(DATA)
+F_ARM_ANY(asinhl) ; Can't use long double functions from the CRT on x86
 atan
 atan2
 F_NON_I386(atan2f)
 F_NON_I386(atanf)
 atanh
 atanhf
-atanhl F_X86_ANY(DATA)
+F_ARM_ANY(atanhl) ; Can't use long double functions from the CRT on x86
 atof
 atoi
 atol
@@ -2200,111 +2200,111 @@ c16rtomb
 c32rtomb
 cabs
 cabsf
-cabsl
+F_ARM_ANY(cabsl) ; Can't use long double functions from the CRT on x86
 cacos
 cacosf
 cacosh
 cacoshf
-cacoshl
-cacosl
+F_ARM_ANY(cacoshl) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(cacosl) ; Can't use long double functions from the CRT on x86
 calloc
 carg
 cargf
-cargl
+F_ARM_ANY(cargl) ; Can't use long double functions from the CRT on x86
 casin
 casinf
 casinh
 casinhf
-casinhl
-casinl
+F_ARM_ANY(casinhl) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(casinl) ; Can't use long double functions from the CRT on x86
 catan
 catanf
 catanh
 catanhf
-catanhl
-catanl
+F_ARM_ANY(catanhl) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(catanl) ; Can't use long double functions from the CRT on x86
 cbrt
 cbrtf
-cbrtl F_X86_ANY(DATA)
+F_ARM_ANY(cbrtl) ; Can't use long double functions from the CRT on x86
 ccos
 ccosf
 ccosh
 ccoshf
-ccoshl
-ccosl
+F_ARM_ANY(ccoshl) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(ccosl) ; Can't use long double functions from the CRT on x86
 ceil
 F_NON_I386(ceilf)
 cexp
 cexpf
-cexpl
+F_ARM_ANY(cexpl) ; Can't use long double functions from the CRT on x86
 cimag
 cimagf
-cimagl
+F_ARM_ANY(cimagl) ; Can't use long double functions from the CRT on x86
 clearerr
 clearerr_s
 clock
 clog
 clog10
 clog10f
-clog10l
+F_ARM_ANY(clog10l) ; Can't use long double functions from the CRT on x86
 clogf
-clogl
+F_ARM_ANY(clogl) ; Can't use long double functions from the CRT on x86
 conj
 conjf
-conjl
+F_ARM_ANY(conjl) ; Can't use long double functions from the CRT on x86
 copysign
 copysignf
-copysignl F_X86_ANY(DATA)
+F_ARM_ANY(copysignl) ; Can't use long double functions from the CRT on x86
 cos
 F_NON_I386(cosf)
 cosh
 F_NON_I386(coshf)
 cpow
 cpowf
-cpowl
+F_ARM_ANY(cpowl) ; Can't use long double functions from the CRT on x86
 cproj
 cprojf
-cprojl
+F_ARM_ANY(cprojl) ; Can't use long double functions from the CRT on x86
 creal
 crealf
-creall
+F_ARM_ANY(creall) ; Can't use long double functions from the CRT on x86
 csin
 csinf
 csinh
 csinhf
-csinhl
-csinl
+F_ARM_ANY(csinhl) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(csinl) ; Can't use long double functions from the CRT on x86
 csqrt
 csqrtf
-csqrtl
+F_ARM_ANY(csqrtl) ; Can't use long double functions from the CRT on x86
 ctan
 ctanf
 ctanh
 ctanhf
-ctanhl
-ctanl
+F_ARM_ANY(ctanhl) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(ctanl) ; Can't use long double functions from the CRT on x86
 div
 erf
 erfc
 erfcf
-erfcl F_X86_ANY(DATA)
+F_ARM_ANY(erfcl) ; Can't use long double functions from the CRT on x86
 erff
-erfl F_X86_ANY(DATA)
+F_ARM_ANY(erfl) ; Can't use long double functions from the CRT on x86
 exit
 exp
 exp2
 exp2f
-exp2l F_X86_ANY(DATA)
+F_ARM_ANY(exp2l) ; Can't use long double functions from the CRT on x86
 F_NON_I386(expf)
 expm1
 expm1f
-expm1l F_X86_ANY(DATA)
+F_ARM_ANY(expm1l) ; Can't use long double functions from the CRT on x86
 fabs
 F_ARM_ANY(fabsf)
 fclose
 fdim
 fdimf
-fdiml F_X86_ANY(DATA)
+F_ARM_ANY(fdiml) ; Can't use long double functions from the CRT on x86
 ; Don't use the float env functions from UCRT; fesetround doesn't seem to have
 ; any effect on the FPU control word as required by other libmingwex math
 ; routines.
@@ -2329,13 +2329,13 @@ floor
 F_NON_I386(floorf)
 fma
 fmaf
-fmal F_X86_ANY(DATA)
+F_ARM_ANY(fmal) ; Can't use long double functions from the CRT on x86
 fmax
 fmaxf
-fmaxl F_X86_ANY(DATA)
+F_ARM_ANY(fmaxl) ; Can't use long double functions from the CRT on x86
 fmin
 fminf
-fminl F_X86_ANY(DATA)
+F_ARM_ANY(fminl) ; Can't use long double functions from the CRT on x86
 fmod
 F_NON_I386(fmodf)
 fopen
@@ -2365,7 +2365,7 @@ getwchar
 hypot
 ilogb
 ilogbf
-ilogbl F_X86_ANY(DATA)
+F_ARM_ANY(ilogbl) ; Can't use long double functions from the CRT on x86
 imaxabs
 imaxdiv
 is_wctype
@@ -2403,36 +2403,36 @@ ldiv
 ; the mingw ones do. Therefore prefer the libmingwex version instead.
 lgamma DATA
 lgammaf DATA
-lgammal DATA
+F_ARM_ANY(lgammal DATA) ; Can't use long double functions from the CRT on x86
 llabs
 lldiv
 llrint
 llrintf
-llrintl F_X86_ANY(DATA)
+F_ARM_ANY(llrintl) ; Can't use long double functions from the CRT on x86
 llround
 llroundf
-llroundl F_X86_ANY(DATA)
+F_ARM_ANY(llroundl) ; Can't use long double functions from the CRT on x86
 localeconv
 log
 log10
 F_NON_I386(log10f)
 log1p
 log1pf
-log1pl F_X86_ANY(DATA)
+F_ARM_ANY(log1pl) ; Can't use long double functions from the CRT on x86
 log2
 log2f
-log2l F_X86_ANY(DATA)
+F_ARM_ANY(log2l) ; Can't use long double functions from the CRT on x86
 logb
 logbf
-logbl F_X86_ANY(DATA)
+F_ARM_ANY(logbl) ; Can't use long double functions from the CRT on x86
 F_NON_I386(logf)
 longjmp
 lrint
 lrintf
-lrintl F_X86_ANY(DATA)
+F_ARM_ANY(lrintl) ; Can't use long double functions from the CRT on x86
 lround
 lroundf
-lroundl F_X86_ANY(DATA)
+F_ARM_ANY(lroundl) ; Can't use long double functions from the CRT on x86
 malloc
 mblen
 mbrlen
@@ -2455,18 +2455,18 @@ modf
 F_NON_I386(modff)
 nan
 nanf
-nanl F_X86_ANY(DATA)
+F_ARM_ANY(nanl) ; Can't use long double functions from the CRT on x86
 nearbyint
 nearbyintf
-nearbyintl F_X86_ANY(DATA)
+F_ARM_ANY(nearbyintl) ; Can't use long double functions from the CRT on x86
 nextafter
 nextafterf
-nextafterl F_X86_ANY(DATA)
+F_ARM_ANY(nextafterl) ; Can't use long double functions from the CRT on x86
 ; All of the nexttoward functions take the second parameter as long double,
 ; making them unusable for x86.
-nexttoward F_X86_ANY(DATA)
-nexttowardf F_X86_ANY(DATA)
-nexttowardl F_X86_ANY(DATA)
+F_ARM_ANY(nexttoward) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(nexttowardf) ; Can't use long double functions from the CRT on x86
+F_ARM_ANY(nexttowardl) ; Can't use long double functions from the CRT on x86
 norm
 normf
 norml
@@ -2487,25 +2487,25 @@ rand_s
 realloc
 remainder
 remainderf
-remainderl F_X86_ANY(DATA)
+F_ARM_ANY(remainderl) ; Can't use long double functions from the CRT on x86
 remove
 remquo
 remquof
-remquol F_X86_ANY(DATA)
+F_ARM_ANY(remquol) ; Can't use long double functions from the CRT on x86
 rename
 rewind
 rint
 rintf
-rintl F_X86_ANY(DATA)
+F_ARM_ANY(rintl) ; Can't use long double functions from the CRT on x86
 round
 roundf
-roundl F_X86_ANY(DATA)
+F_ARM_ANY(roundl) ; Can't use long double functions from the CRT on x86
 scalbln
 scalblnf
-scalblnl F_X86_ANY(DATA)
+F_ARM_ANY(scalblnl) ; Can't use long double functions from the CRT on x86
 scalbn
 scalbnf
-scalbnl F_X86_ANY(DATA)
+F_ARM_ANY(scalbnl) ; Can't use long double functions from the CRT on x86
 set_terminate
 set_unexpected
 setbuf
@@ -2549,8 +2549,7 @@ strtoimax
 strtok
 strtok_s
 strtol
-; Can't use long double functions from the CRT on x86
-F_ARM_ANY(strtold)
+F_ARM_ANY(strtold) ; Can't use long double functions from the CRT on x86
 strtoll
 strtoul
 strtoull
@@ -2565,7 +2564,7 @@ F_NON_I386(tanhf)
 terminate
 tgamma
 tgammaf
-tgammal F_X86_ANY(DATA)
+F_ARM_ANY(tgammal) ; Can't use long double functions from the CRT on x86
 tmpfile
 tmpfile_s
 tmpnam
@@ -2577,7 +2576,7 @@ towlower
 towupper
 trunc
 truncf
-truncl F_X86_ANY(DATA)
+F_ARM_ANY(truncl) ; Can't use long double functions from the CRT on x86
 unexpected
 ungetc
 ungetwc
@@ -2612,8 +2611,7 @@ wcstoimax
 wcstok
 wcstok_s
 wcstol
-; Can't use long double functions from the CRT on x86
-F_ARM_ANY(wcstold)
+F_ARM_ANY(wcstold) ; Can't use long double functions from the CRT on x86
 wcstoll
 wcstombs
 wcstombs_s
