crt: Define C99 wcsto[u]ll/wcsto[iu]max functions for all CRT import libraries
Functions _wcstoi64() and _wcstoui64() are available since msvcr70.dll and
are equivalent to C99 wcstoll() and wcstoull() functions. As mingw-w64
defines intmax_t and uintmax_t types 64-bit, same as (unsigned) long long,
these functions are equivalent also to C99 wcstoimax() and wcstoumax()
functions.

So for msvcr70+ import libraries define C99 function symbols wcstoll,
wcstoull, wcstoimax and wcstoumax as aliases to _wcstoi64 and _wcstoui64
symbols in the same way as are defined aliases to _strtoi64 and _strtoui64
symbols.

For previous versions use mingw-w64 implementation from wcstoimax.c and
wcstoumax.c files. Move them from libmingwex library to individual CRT
import libraries, to ensure that for msvcr70+ is used the native version
(and not the one from libmingwex).

This change mimics commits c52f1eb09901e038ceb7012730e7cf3395d65a78 and
4953f7746a9aca7ae065fa9aa77eb9d02d0ed752 but for wide-char functions.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -455,6 +455,8 @@ src_msvcrt32=\
   misc/strtoimax.c \
   misc/strtoumax.c \
   misc/wassert.c \
+  misc/wcstoimax.c \
+  misc/wcstoumax.c \
   stdio/_fstat64i32.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c
@@ -641,6 +643,8 @@ src_crtdll=\
   misc/strtoimax.c \
   misc/strtoumax.c \
   misc/wassert.c \
+  misc/wcstoimax.c \
+  misc/wcstoumax.c \
   stdio/_filelengthi64.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
@@ -685,6 +689,8 @@ src_msvcrt10=\
   misc/strtoimax.c \
   misc/strtoumax.c \
   misc/wassert.c \
+  misc/wcstoimax.c \
+  misc/wcstoumax.c \
   stdio/_filelengthi64.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
@@ -718,6 +724,8 @@ src_msvcrt20=\
   misc/strtoimax.c \
   misc/strtoumax.c \
   misc/wassert.c \
+  misc/wcstoimax.c \
+  misc/wcstoumax.c \
   stdio/_filelengthi64.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
@@ -746,6 +754,8 @@ src_msvcrt40=\
   misc/strtoimax.c \
   misc/strtoumax.c \
   misc/wassert.c \
+  misc/wcstoimax.c \
+  misc/wcstoumax.c \
   stdio/_scprintf.c \
   stdio/_vscprintf.c \
   stdio/atoll.c \
@@ -860,7 +870,7 @@ src_libmingwex=\
   misc/tdelete.c         misc/tdestroy.c            misc/tfind.c           \
   misc/tsearch.c         misc/twalk.c           \
   misc/wcsnlen.c         misc/wcstof.c          \
-  misc/wcstoimax.c       misc/wcstold.c             misc/wcstoumax.c        misc/wctob.c                 misc/wctrans.c         \
+  misc/wcstold.c         misc/wctob.c               misc/wctrans.c         \
   misc/wctype.c          misc/wdirent.c             misc/winbs_uint64.c     misc/winbs_ulong.c           misc/winbs_ushort.c    \
   misc/wmemchr.c         misc/wmemcmp.c             misc/wmemcpy.c          misc/wmemmove.c              misc/wmempcpy.c        \
   misc/wmemset.c         misc/ftw.c                 misc/ftw64.c            misc/mingw-access.c          \
