crt: crt-aliases.def.in: Provide _wtoll and _wtoll_l symbols aliases
Use same conditions for providing _wtoll and _wtoll_l symbols aliases as
are already used for atoll and _atoll_l symbol aliases.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/def-include/crt-aliases.def.in
+++ b/mingw-w64-crt/def-include/crt-aliases.def.in
@@ -267,10 +267,12 @@ __iob_func == __p__iob
 
 #ifdef WITH_ATOLL_ALIAS
 atoll == _atoi64
+_wtoll == _wtoi64
 #endif
 
 #ifdef WITH_ATOLL_L_ALIAS
 _atoll_l == _atoi64_l
+_wtoll_l == _wtoi64_l
 #endif
 
 #ifdef WITH_LLABS_ALIAS
