crt: Split __initenv and __winitenv symbols into separate files
Every executable references only one of those symbols. So if symbols are
split into separate files, linker includes only the one which is used.

(While splitting, simplify the use of headers as well.)

crtdll.dll and msvcrt10.dll do not have entry point for wide wmain() and
therefore they do not need __winitenv init symbol. So do not provide
__winitenv symbol for these two CRT import libraries.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -355,6 +355,7 @@ src_ucrtbase=\
   math/_huge.c \
   misc/__badioinfo.c \
   misc/__initenv.c \
+  misc/__winitenv.c \
   misc/ucrt-access.c \
   stdio/ucrt_fprintf.c \
   stdio/ucrt_fscanf.c \
@@ -502,6 +503,7 @@ src_msvcrtarm32=\
   misc/__p__wpgmptr.c \
   misc/_getpid.c \
   misc/__initenv.c \
+  misc/__winitenv.c \
   stdio/_fstat64i32.c \
   stdio/_setmaxstdio.c \
   stdio/gets.c
@@ -606,6 +608,7 @@ src_msvcrtarm64=\
   misc/__p__wpgmptr.c \
   misc/_getpid.c \
   misc/__initenv.c \
+  misc/__winitenv.c \
   stdio/_setmaxstdio.c \
   stdio/gets.c
 
