crt: Access __initenv and __winitenv global variables via __p___initenv() and __p___winitenv() functions
MS Visual C++ also access these variables via __p_*() functions which
return pointer to those variables. Do same in mingw-w64 startup code.

UCRT, msvcr120_app.dll and non-i386 versions of msvcrt.dll do not export
__p_*() functions. So provide them via mingw-w64 import libraries.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -354,6 +354,8 @@ src_ucrtbase=\
   crt/ucrtbase_compat.c \
   math/_huge.c \
   misc/__badioinfo.c \
+  misc/__p___initenv.c \
+  misc/__p___winitenv.c \
   misc/__initenv.c \
   misc/__winitenv.c \
   misc/ucrt-access.c \
@@ -470,6 +472,8 @@ src_msvcrt64=\
   misc/__p___argc.c \
   misc/__p___argv.c \
   misc/__p___wargv.c \
+  misc/__p___initenv.c \
+  misc/__p___winitenv.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__environ.c \
@@ -493,6 +497,8 @@ src_msvcrtarm32=\
   misc/__p___argc.c \
   misc/__p___argv.c \
   misc/__p___wargv.c \
+  misc/__p___initenv.c \
+  misc/__p___winitenv.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
@@ -598,6 +604,8 @@ src_msvcrtarm64=\
   misc/__p___argc.c \
   misc/__p___argv.c \
   misc/__p___wargv.c \
+  misc/__p___initenv.c \
+  misc/__p___winitenv.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
   misc/__p__fmode.c \
@@ -621,6 +629,7 @@ src_crtdll=\
   misc/__initenv.c \
   misc/__p___argc.c \
   misc/__p___argv.c \
+  misc/__p___initenv.c \
   misc/__p___mb_cur_max.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
@@ -669,6 +678,7 @@ src_msvcrt10=\
   misc/__initenv.c \
   misc/__p___argc.c \
   misc/__p___argv.c \
+  misc/__p___initenv.c \
   misc/__p___mb_cur_max.c \
   misc/__p__acmdln.c \
   misc/__p__commode.c \
@@ -816,6 +826,8 @@ src_msvcr110=\
   misc/isblank.c
 
 src_msvcr120_app=\
+  misc/__p___initenv.c \
+  misc/__p___winitenv.c \
   misc/__set_app_type.c \
   misc/_getpid.c
 
