crt: msvcr120_app: Provide emulation of __p__environ and __p__wenviron symbols
msvcr120_app.dll library does not provide __p__environ() and
__p__wenviron() functions, but provides _environ[] and _wenviron[] arrays.

So include mingw-w64 emulation of __p__environ() and __p__wenviron()
functions via _environ[] and _wenviron[] arrays into msvcr120_app import
library.

Signed-off-by: Martin Storsjö <martin@martin.st>

--- a/mingw-w64-crt/Makefile.am
+++ b/mingw-w64-crt/Makefile.am
@@ -828,6 +828,8 @@ src_msvcr110=\
 src_msvcr120_app=\
   misc/__p___initenv.c \
   misc/__p___winitenv.c \
+  misc/__p__environ.c \
+  misc/__p__wenviron.c \
   misc/__set_app_type.c \
   misc/_getpid.c
 
