headers: Update to current Wine master
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-headers/Makefile.am
+++ b/mingw-w64-headers/Makefile.am
@@ -285,6 +285,7 @@ IDL_SRCS = \
   include/windows.applicationmodel.background.idl \
   include/windows.applicationmodel.core.idl \
   include/windows.applicationmodel.idl \
+  include/windows.data.json.idl \
   include/windows.devices.bluetooth.idl \
   include/windows.devices.enumeration.idl \
   include/windows.devices.geolocation.idl \
